Fixed White Spaces of bg color + minor changes

--- a/src/app/calendar-grid/calendar-grid.component.scss
+++ b/src/app/calendar-grid/calendar-grid.component.scss
@@ -1,6 +1,3 @@
-body{
-  background: linear-gradient(-135deg, #c850c0, #4158d0);
-}
 
 
 
