--- a/src/app/event-detail/event-detail.component.scss
+++ b/src/app/event-detail/event-detail.component.scss
@@ -8,7 +8,7 @@ mat-form-field {
 
 .main {
   font-family: 'Poppins';
-  background: linear-gradient(-135deg, #c850c0, #4158d0);
+  //background: linear-gradient(-135deg, #c850c0, #4158d0);
   height: 100vh;
   display: flex;
   align-items: center;
@@ -31,7 +31,6 @@ mat-form-field {
 .font {
   font-family: 'Poppins';
 }
-
 
 h1 {
   font-weight: bolder;
