--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -25,15 +25,10 @@
   }
 }
 
-.main {
-  font-family: 'Poppins';
-  background: linear-gradient(-135deg, #c850c0, #4158d0);
-  color: white;
-}
-
 .basic{
   font-family: 'Poppins';
   color: white;
   text-decoration-color: white;
 }
+
 
